# SwaziLang

./: .cfmtconfig  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cfmt.sh  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmtsrc.sh  version
examples/: Shapes.sl  todo.sl
examples/designs/: buffer.md
examples/mods/: net.sl  timer.sl  utils.sl
examples/samples/: db.sl  evtBus.sl
examples/www/: app.sl  main.sl  toml.sl  toml_str.toml
include/: AsyncBridge.hpp  ClassRuntime.hpp  EventEmitterClass.hpp  Frame.hpp  Scheduler.hpp  SourceManager.hpp  SwaziError.hpp  ThreadWorkerContext.hpp  ast.hpp  builtin_sl.h  builtins.hpp  cli_commands.hpp  colors.hpp  evaluator.hpp  globals.hpp  lexer.hpp  memory_tracking.hpp  muda_class.hpp  muda_time_utils.hpp  parser.hpp  print_debug.hpp  print_tokens.hpp  proxy_class.hpp  repl.hpp  sample.h  set_class.hpp  swazi.hpp  swazi_abi.h  time.hpp  token.hpp  tracking_buffer_vector.hpp  url_class.hpp  worker.hpp
include/debugging/: outputTry.hpp
include/format/: format.hpp
lib/: Math.sl  SWAZI_TYPES.sl  console.sl  event_emitter.sl  export.sl  math.sl  pollyfills.sl  prelude.sl
lib/@utils/: Math.sl  debounce.sl  memo.sl  str.sl  throttle.sl
lib/src/: eventEmitter.sl
scripts/: embed_builtins.py
src/: cli_commands.cc  evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  print_tokens.cpp  relp_debug.cpp  repl.cpp  sample.cc
src/evaluator/: AsyncApi.cpp  Environment.cpp  Evaluator.cpp  EvaluatorHelper.cpp  ExpressionEval.cpp  FunctionCall.cpp  ModuleLoader.cpp  StatementEval.cpp  memory.cc
src/evaluator/Async/: AsyncApi.cpp  HttpAPI.cpp  Scheduler.cpp
src/evaluator/RELP/: Evaluator.cpp  debbuger.cc
src/evaluator/abi/: AddonBridge.cc
src/evaluator/globals/: initial.cpp  muda_class.cpp  muda_time_utils.cpp  proxy_class.cc  serialization.cc  set_class.cpp  time.cpp  url_class.cc  worker.cc
src/evaluator/modules_builtins/: archiver.cc  builtins.cpp  child_process.cc  collection.cc  crypto.cc  datetime.cc  file.cc  stdin.cc  streams.cc  subprocess.cc  threads.cc  time.cc
src/evaluator/modules_builtins.cpp/: builtins.cpp
src/evaluator/modules_builtins/collections/: collection.cc
src/evaluator/modules_builtins/events/: event_emitter_class.cc  events.cc
src/evaluator/modules_builtins/fs_module/: fs.cc
src/evaluator/modules_builtins/http/: http_client_modern.cc  http_server.cc
src/evaluator/modules_builtins/net_module/: net.hpp  net_module.cc  tcp.cc  unix.cc  upd.cc  ws.cc
src/evaluator/modules_builtins/process/: iostream.cc  ipc.cc  process_ipc.cc
src/evaluator/modules_builtins/regex/: regex.cc
src/evaluator/modules_builtins/streams/: duplex.cc  readable.cc  streams.cc  streams.h  writable.cc
src/evaluator/modules_builtins/subprocess/: subprocess.cc  subprocess_fork.cc
src/evaluator/modules_builtins/uv/: ThreadWorkerContext.cc  threads.cc  uv.cc  uv.hpp
src/format/: format.cc  format_expr.cc  format_stmt.cc
src/others/: print_debug.cpp
src/parser/: blocks.cpp  control_flow.cpp  expressions.cpp  parser.cpp  statements.cpp
tests/: random_test_1.cc  test_eval.cc  test_freeze.cc  test_lexer.cc  test_main.cc  test_parser.cc  test_repl.cc
